--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -11,6 +11,6 @@
     "home": "홈"
   },
   "Footer": {
-    "copyright": "© 2024 Your App. All rights reserved."
+    "copyright": "© 2024 고양이홀씨. All rights reserved."
   }
 }
