feat: navigation, register
fix: i18n 한국어 기본값 추가
fix: route 구조변경- 로그인 후 페이지들은 (home) layout으로 통일

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,17 +8,38 @@
     "description": "Oops! It seems like you've stumbled upon a page that doesn't exist. Don't worry, our internationalization magic is still hard at work on other parts of the app. Feel free to navigate back to explore more!"
   },
   "Navigation": {
-    "home": "Home"
+    "home": "Make My Body Lighter"
   },
   "Footer": {
     "copyright": "© 2024 Cat Holcci. All rights reserved."
   },
   "Login": {
     "intro": "Make My Body Lighter",
+    "description": "Manage your daily diet record.",
     "login": "Sign in",
     "id": "ID",
     "password": "Password",
     "logout": "Logout",
     "signup": "Sign up"
+  },
+  "Register": {
+    "signup": "Sign up to Make My Body Lighter",
+    "submit": "Submit",
+    "userid": "ID",
+    "password": "Password",
+    "email": "E-MAIL",
+    "nickname": "Nickname",
+    "currentHeight": "Your Height",
+    "currentWeight": "Your Weight",
+    "goalWeight": "Goal Weight",
+    "goalFat": "Goal Body Fat",
+    "goalMuscle": "Goal Body Muscle",
+    "whatwantsay": "Please enter what you want to achive about diet."
+  },
+  "Navibar": {
+    "feed": "Feed",
+    "graph": "Graph",
+    "bookmark": "Bookmark",
+    "my": "My"
   }
 }
